Continuação do desenvolvimento das telas

--- a/historico.html
+++ b/historico.html
@@ -25,9 +25,8 @@
         }
 
         header {
-            padding: 10px;
-            color: rgb(5, 5, 5);
             padding: 5px;
+            color: rgb(5, 5, 5);
         }
 
         main {
@@ -57,7 +56,7 @@
         }
 
         ul a:hover {
-            color: rgba(6, 255, 31, 0.60);
+            color: #26BF19;
         }
 
         input {
@@ -73,11 +72,11 @@
             width: 100%;
             border-collapse: collapse;
             margin-bottom: 20px;
-            margin-top: 70px;
+            margin-top: 100px;
             }
 
         td {
-            border: 1px solid rgba(6, 255, 31, 0.60);
+            border: 1px solid #26BF19;
             text-align: center;
             padding: 8px;
             color: white;
@@ -88,11 +87,18 @@
         }
             
         div{
-            background-color: rgba(6, 255, 31, 0.60); 
+            background-color: #26BF19;
             height: 50px; 
             width: 100%; 
             position: fixed; 
             top: 0; 
+        }
+
+        h1{
+            color: white;
+            text-align: center;
+            margin-top: 70px;
+            margin-bottom: 30px;
         }
 
     </style>
@@ -112,7 +118,7 @@
                     </nav>
                 </div>
         </header>
-        
+        <h1>HISTÓRICO DE EVENTOS</h1>
         <table>
             <thead>
                 <tr>
