--- a/agenda.html
+++ b/agenda.html
@@ -92,6 +92,33 @@
             border-radius: 30px;
         }
 
+        table {
+            border-collapse: collapse;
+            background: white;
+            color: rgb(226, 194, 194);
+        }
+          
+        th,
+        td {
+            font-weight: bold;
+            color: aliceblue;
+        }
+
+        tr{
+            color: aliceblue;
+        }
+
+        h2{
+            color: aliceblue;
+            display: flex;
+            text-align: center;
+        }
+
+        #calendario{
+            display: flex;
+            margin-top: 30px;
+        }
+
     </style>
    
     <body>
@@ -109,20 +136,5 @@
                 </nav>
             </div>
         </header>
-
-        
-        <article>
-            <ul>
-                <li> Natação </li>
-                <li> Natação </li>
-                <li> Natação </li>
-            </ul>
-            <ul>
-                <li> Natação </li>
-                <li> Natação </li>
-
-            </ul>
-        </article>
- 
     </body>
 </html>
