Continuação do desenvolvimento

--- a/agenda.html
+++ b/agenda.html
@@ -5,6 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Agenda</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="shortcut icon" type="logo/png" href="img/logo-1.ico">
     <https://github.com/new>
 </head>
     <style>
