--- a/esportes.html
+++ b/esportes.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SPORTECH</title>
+    <title>Esportes</title>
     <link rel="stylesheet" href="style2.css">
+    <link rel="shortcut icon" type="logo/png" href="img/logo-1.ico">
 </head>
 <body>
     <header>
