--- a/cadastro.html
+++ b/cadastro.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Cadastre-se</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="shortcut icon" type="logo/png" href="img/logo-1.ico">
+    <https://github.com/new>
     <style>
 
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap');
