--- a/historico.html
+++ b/historico.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Sobre</title>
+    <title>Histórico</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="shortcut icon" type="logo/png" href="img/logo-1.ico">
     <https://github.com/new>
 </head>
 
