--- a/cadastro.html
+++ b/cadastro.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset='utf-8'>
+    <meta charset='UTF-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Cadastre-se</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel="shortcut icon" type="logo/png" href="img/logo-1.ico">
-    <https://github.com/new>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+    <link rel="shortcut icon" type="image/x-icon" href="img/logo-1.ico">
     <style>
 
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap');
@@ -77,7 +76,7 @@
 
         a{
             color: white;
-            
+            text-decoration: none;
         }
 
         input{
@@ -87,6 +86,7 @@
             border-right: none;
             width: 350px;
             margin-top: none;
+            margin-bottom: 1.8rem;
         }
 
         label{
@@ -136,7 +136,7 @@
                 <a href="login.html">Já possui cadastro? Clique aqui</a> <br>
                </p> 
 
-                <button><a href="cadastro.html">Cadastre-se</a></button>
+                <button><a href="edicao.html">Cadastre-se</a></button>
                   
             </form>
     </main>
