Ajuste no menu de todas as páginas

--- a/cadastro.html
+++ b/cadastro.html
@@ -38,10 +38,11 @@
         }
 
         img{
-            width: 20rem;
-            height: 20rem;
+            width: 25rem;
+            height: 25rem;
             margin-bottom: 0px;
         }
+        
         button{
             background-color: #06FF1F;
             padding: 0.5rem;
@@ -75,7 +76,8 @@
         }
 
         a{
-            color: white;
+            text-align: center;
+            color: black;
             text-decoration: none;
         }
 
