--- a/historico.html
+++ b/historico.html
@@ -6,7 +6,7 @@
     <title>Histórico</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="shortcut icon" type="logo/png" href="img/logo-1.ico">
-    <https://github.com/new>
+    <link rel="stylesheet" href="style/main.css">
 </head>
 
 <style>
@@ -15,65 +15,21 @@
 
         body{
             background-color: rgb(27, 26, 26); 
-            font-family: 'Nunito', sans-serif;   
+            gap: 1rem;  
+            color: white;
+            font-family: 'Nunito', sans-serif;      
+            margin: 0;
         }   
-
-        section{
-            display: flex;
-            flex-wrap: wrap;
-            padding: 1rem;
-            gap: 2rem;
-        }
-
-        header {
-            padding: 5px;
-            color: rgb(5, 5, 5);
-        }
-
-        main {
-            flex:2; 
-            gap: 3rem;           
-        }
 
         p {
             margin: 2rem;
         }
 
-        nav {
-            display: flex;
-            justify-content: space-between;
-            float: right; 
-        }
-
-        ul {
-            display: flex;
-            list-style-type: none;   
-        }
-
-        ul a {
-            text-decoration: none;
-            color: white;
-            margin: 0 15px;
-        }
-
-        ul a:hover {
-            color: #26BF19;
-        }
-
-        input {
-            border-radius: 20px;
-            border: 1px solid white;
-            padding: 8px;
-            margin-right: 10px;
-            background-color: transparent;
-            color: white;
-        }
-
         table {
-            width: 100%;
+            margin: 0;
+            float: right;
+            min-width: 80%;
             border-collapse: collapse;
-            margin-bottom: 20px;
-            margin-top: 100px;
             }
 
         td {
@@ -87,14 +43,6 @@
             color:white;
         }
             
-        div{
-            background-color: #26BF19;
-            height: 50px; 
-            width: 100%; 
-            position: fixed; 
-            top: 0; 
-        }
-
         h1{
             color: white;
             text-align: center;
@@ -102,52 +50,86 @@
             margin-bottom: 30px;
         }
 
+        main{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            gap: 2rem;
+        }
+
     </style>
 
     <body>
         <header>
-                <div>
-                    <nav>
-                        <ul>
-                            <li><a href="index.html">Página Inicial</a></li>
-                            <li><a href="sobre.html">Sobre</a></li>
-                            <li><a href="#">Eventos</a></li>
-                            <li><a href="historico.html">Histórico e Avaliações</a></li>
-                            <li><a href="agenda.html">Agenda</a></li>
-                            <li><input type="text" placeholder="Buscar"></li>
-                        </ul>
-                    </nav>
-                </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Página Inicial</a></li>
+                    <li><a href="sobre.html">Sobre</a></li>
+                    <li><a href="#">Eventos</a></li>
+                    <li><a href="historico.html">Histórico e Avaliações</a></li>
+                    <li><a href="#">Agenda</a></li>
+                    <li><input type="text" placeholder="Buscar"></li>
+                </ul>
+            </nav>
         </header>
-        <h1>HISTÓRICO DE EVENTOS</h1>
-        <table>
-            <thead>
-                <tr>
-                    <th>MODALIDADE</th>
-                    <th>NOME DO EVENTO</th>
-                    <th>DATA</th>
-                    <th>LOCAL</th>
-                    <th>AVALIAÇÃO</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>NATAÇÃO</td>
-                    <td>5° CAMPEONATO DE NATAÇÃO</td>
-                    <td>29-12-2023</td>
-                    <td>UNISANTA</td>
-                </tr>
-                <tr>
-                    <td>NATAÇÃO</td>
-                    <td>5° CAMPEONATO DE NATAÇÃO</td>
-                    <td>29-12-2023</td>
-                    <td>UNISANTA</td>
-                </tr>
-                <tr><td>NATAÇÃO</td>
-                    <td>5° CAMPEONATO DE NATAÇÃO</td>
-                    <td>29-12-2023</td>
-                    <td>UNISANTA</td></tr>
-            </tbody>
-        </table>
+        <main>
+            <h1>HISTÓRICO DE EVENTOS</h1>
+            <table>
+                <thead>
+                    <tr>
+                        <th>MODALIDADE</th>
+                        <th>NOME DO EVENTO</th>
+                        <th>DATA</th>
+                        <th>LOCAL</th>
+                        <th>AVALIAÇÃO</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>NATAÇÃO</td>
+                        <td>5° CAMPEONATO DE NATAÇÃO</td>
+                        <td>29-12-2023</td>
+                        <td>UNISANTA</td>
+                    </tr>
+                    <tr>
+                        <td>NATAÇÃO</td>
+                        <td>5° CAMPEONATO DE NATAÇÃO</td>
+                        <td>29-12-2023</td>
+                        <td>UNISANTA</td>
+                    </tr>
+                    <tr><td>VÔLEI</td>
+                        <td>5° CAMPEONATO DE VÔLEI</td>
+                        <td>29-12-2023</td>
+                        <td>UNISANTA</td>
+                    </tr>
+                    <tr><td>VÔLEI</td>
+                        <td>5° CAMPEONATO DE VÔLEI</td>
+                        <td>29-12-2023</td>
+                        <td>UNISANTA</td>
+                    </tr>
+                    <tr><td>VÔLEI</td>
+                        <td>5° CAMPEONATO DE VÔLEI</td>
+                        <td>29-12-2023</td>
+                        <td>UNISANTA</td>
+                    </tr>
+                    <tr><td>VÔLEI</td>
+                        <td>5° CAMPEONATO DE VÔLEI</td>
+                        <td>29-12-2023</td>
+                        <td>UNISANTA</td>
+                    </tr>
+                    <tr><td>VÔLEI</td>
+                        <td>5° CAMPEONATO DE VÔLEI</td>
+                        <td>29-12-2023</td>
+                        <td>UNISANTA</td>
+                    </tr>
+                    <tr><td>VÔLEI</td>
+                        <td>5° CAMPEONATO DE VÔLEI</td>
+                        <td>29-12-2023</td>
+                        <td>UNISANTA</td>
+                    </tr>
+                </tbody>
+            </table>
+        </main>
     </body>
 </html>
