Ajuste nas configurações

--- a/edicao.html
+++ b/edicao.html
@@ -198,7 +198,7 @@
 
     </form>    
     <footer class="button-container">
-        <a id="concluir" href="modalidades.html">Continuar</a>
+        <a id="concluir" href="inicio.html">Concluir</a>
     </footer>
 </main>
 </section>
