--- a/inicio.html
+++ b/inicio.html
@@ -247,7 +247,9 @@
             </ul>
             <br>
             <ul>
-                <li><i class="fas fa-cogs"></i> <a href="edicao.html">Configurações</a></li>
+                <li><a href="#">Configurações</a></li>
+                <li><i class="fas fa-cogs"></i> <a href="edicao.html">Edite seu perfil</a></li>
+                <li><i class="fas fa-cogs"></i> <a href="modalidades.html">Edite as modalidades</a></li>
                 <li><i class="fas fa-sign-out-alt"></i> Sair</li>
             </ul>
         </div>
