--- a/cadastro.html
+++ b/cadastro.html
@@ -138,7 +138,7 @@
                 <a href="login.html">Já possui cadastro? Clique aqui</a> <br>
                </p> 
 
-                <button><a href="edicao.html">Cadastre-se</a></button>
+                <button><a href="inicio.html">Cadastre-se</a></button>
                   
             </form>
     </main>
