ajustes nas telas de histórico, eventos e calendário

--- a/edicao.html
+++ b/edicao.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Edite seu perfil</title>
+    <title>EDIÇÃO</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="shortcut icon" type="logo/png" href="img/logo-1.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -130,27 +130,26 @@
             flex-direction: column;
             gap:0;
         }
+    }
 
-
-
-        }
 
     </style>
 </head>
 <body>
     <header>
+        <div id="dev-icon"><a href="edicao.html"> <i class="fas fa-user profile-icon"></i></a></div>
         <nav>
             <ul>
                 <li><a href="index.html">Página Inicial</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
-                <li><a href="#">Eventos</a></li>
+                <li><a href="eventos.html">Eventos</a></li>
                 <li><a href="historico.html">Histórico e Avaliações</a></li>
                 <li><a href="#">Agenda</a></li>
-                <li><input type="text" placeholder="Buscar"></li>
             </ul>
         </nav>
 
     </header>
+    
     <h1>EDITE SEU PERFIL</h1>
 
     <section>
@@ -198,7 +197,8 @@
 
     </form>    
     <footer class="button-container">
-        <a id="concluir" href="inicio.html">Concluir</a>
+        <a id="concluir" href="modalidades.html">Continuar</a>
+        
     </footer>
 </main>
 </section>
