--- a/inicio.html
+++ b/inicio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>SPORTECH</title>
+    <title>INÍCIO</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="shortcut icon" type="logo/png" href="img/logo-1.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -211,6 +211,7 @@
 
         }
 
+
     </style>
   
 <body id="sobre">
@@ -219,17 +220,16 @@
             <svg id="border-left" xmlns="http://www.w3.org/2000/svg" width="213" height="170"  fill="none">
                 <path d="M-0.000131819 -0.000138209L212.5 -0.000195885L-0.000656047 170L-0.000131819 -0.000138209Z" fill="#26BF19" />
             </svg>
+            <div id="dev-icon"><a href="edicao.html"> <i class="fas fa-user profile-icon"></i></a></div>
                 <nav>
                     <ul>
-                        <li><a href="index.html">Página Inicial</a></li>
                         <li><a href="sobre.html">Sobre</a></li>
-                        <li><a href="#">Eventos</a></li>
+                        <li><a href="eventos.html">Eventos</a></li>
                         <li><a href="historico.html">Histórico e Avaliações</a></li>
                         <li><a href="agenda.html">Agenda</a></li>
-                        <li><input type="text" placeholder="Buscar"></li>
                     </ul>
                 </nav>
-                <div id="menu-toggle" onclick="toggleMenu()">
+                <!-- <div id="menu-toggle" onclick="toggleMenu()">
                     <i class="fas fa-bars"></i> Menu
                 </div>
         </header>
@@ -252,7 +252,7 @@
                 <li><i class="fas fa-cogs"></i> <a href="modalidades.html">Edite as modalidades</a></li>
                 <li><i class="fas fa-sign-out-alt"></i> Sair</li>
             </ul>
-        </div>
+        </div> -->
         <section>
                 <main>
                     <h1>BEM-VINDO A SPORTECH, {Usuário}!</h1>  
