--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
             display: flex;
             margin: 0;
             font-family: 'Nunito', sans-serif;
-            background-color: #26BF19;
+            background-color: rgb(27, 26, 26);
         }
 
         main{
@@ -27,13 +27,14 @@
         }
 
         aside{
-            background-color: black;
+            background-color: rgb(27, 26, 26);
             flex: 1;
             display: flex;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
             flex-direction: column;
+            border-left: 5px solid #26BF19;
         }
 
         img{
@@ -43,16 +44,17 @@
         }
 
         button{ 
-            background-color: #06FF1F;
+            background-color: #26BF19;
             padding: 0.4rem;
             color: black;
             border-radius: 3rem;
             width: 15rem;
             border: 0.1rem solid rgb(7, 7, 7);
-            
+            margin-left: 30px;
             font-weight: bold;
             font-family: 'Nunito', sans-serif;
             font-size: 1.5rem;
+            z-index: 0;
         }
 
         form{
