--- a/agenda.html
+++ b/agenda.html
@@ -183,7 +183,7 @@
                     <li><a href="eventos.html">Eventos</a></li>
                     <li><a href="agenda.html">Agenda</a></li>
                     <li><a href="historico.html">Histórico</a></li>
-                    <div id="dev-icon"><a href="edicao.html"> <i class="fas fa-user profile-icon"></i></a></div>
+                    <div id="dev-icon"><a href="#"> <i class="fas fa-user profile-icon"></i></a></div>
                 </ul>
             </nav>
         </header>
