--- a/edicao.html
+++ b/edicao.html
@@ -147,7 +147,7 @@
                 <li><a href="historico.html">Histórico</a></li>
                 <li><a href="agenda.html">Agenda</a></li>
             </ul>
-            <div id="dev-icon"><a href="edicao.html"> <i class="fas fa-user profile-icon"></i></a></div>
+            <div id="dev-icon"><a href="#"> <i class="fas fa-user profile-icon"></i></a></div>
         </nav>
 
     </header>
