--- a/sobre.html
+++ b/sobre.html
@@ -153,7 +153,7 @@
                     <li><a href="historico.html">Histórico</a></li>
 
                 </ul>
-                <div id="dev-icon"><a href="edicao.html"> <i class="fas fa-user profile-icon"></i></a></div>
+                <div id="dev-icon"><a href="#"> <i class="fas fa-user profile-icon"></i></a></div>
 
             </nav>
         </div>
