--- a/edicao.html
+++ b/edicao.html
@@ -158,7 +158,7 @@
        
         <aside>
             <label for="profilePicture" style="cursor: pointer; position: relative;">
-                <img src="img/perfil.png" alt="Foto do perfil" class="profile-picture" id="avatarImage">
+                <img src="img/perfil.jpg" alt="Foto do perfil" class="profile-picture" id="avatarImage">
                 <i class="fas fa-pencil-alt" style="position: absolute; margin-left: 10px; margin-top: -10px; color: #26BF19;; font-size: 1.5rem;"></i>
             </label>
             <input type="file" id="profilePicture" name="profilePicture" class="file-input" style="display: none;" onchange="previewAvatar()">
