--- a/eventos.html
+++ b/eventos.html
@@ -1,176 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset='utf-8'>
-        <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-        <title>EVENTOS</title>
-        <meta name='viewport' content='width=device-width, initial-scale=1'>
-        <link rel="shortcut icon" type="logo/png" href="img/logo-1.ico">
-        <link rel="stylesheet" href="style/main.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
-    <style>
-         @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap');
 
-        body {
-            font-family: 'Nunito', sans-serif;      
-            margin: 0;
-            padding: 0;
-            background-color: rgb(27, 26, 26); 
-        }
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>EVENTOS</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="shortcut icon" type="logo/png" href="img/logo-1.ico">
+    <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <script src="js/dropdown.js"></script>
 
-        .container {
-            text-align: center;
-            padding: 20px;
-        }
-
-        h2 {
-            color: white;
-            margin-top: 4rem;
-            display: inline;
-        }
-
-        .owl-carousel {
-            margin-top: 20px;
-        }
-
-      
-
-        .item {
-            background-color: #26BF19; /* Fundo verde */
-            border-radius: 20px;
-            overflow: hidden;
-            margin: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            display: flex;
-            flex-direction: column;
-        }
-
-        .item img {
-            width: 50px;
-            height: 350px; /* 80% da altura do item */
-            border-bottom: 1px solid #fff; /* Adiciona uma linha branca abaixo da imagem */
-            border-radius: 20px 20px 0 0;
-        }
-
-        .sport-name {
-            background-color: #26BF19;
-            color: black;
-            padding: 20px;
-            text-align: center;
-            font-size: 14px;
-            font-weight: bold;  
-            display: flex; 
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .owl-nav {
-            margin-top: 10px;
-        }
-
-        .owl-prev,
-        .owl-next {
-            font-size: 24px;
-            color: white;
-        }
-
-        .round-button {
-            border-radius: 20px;
-            padding: 10px 20px;
-            margin: 0 100px;
-            font-size: 16px;
-            color: white;
-        }
-
-        #concluir{
-            text-align: center;
-            background-color: rgb(61, 60, 60);
-            color: white;
-            border-radius: 3rem;
-            width: 5rem;
-            font-size: 1rem;
-            text-decoration: none;
-        }
-
-        #modalidades {
-            float: left;
-            width: 200px; /* Defina o tamanho desejado */
-            padding: 10px; /* Adicione algum espaço interno */
-            background-color: #26BF19; /* Cor de fundo verde */
-            color: white; /* Cor do texto */
-            border: 1px solid black; /* Borda */
-            border-radius: 5px; /* Borda arredondada */
-            font-size: 16px; /* Tamanho da fonte */
-            transition: background-color 0.3s; /* Transição suave para o efeito hover */
-            margin-top: 3rem;
-        }
-
-        /* Estilizando as opções da caixa de seleção */
-        #modalidades option {
-            background-color: #26BF19; /* Cor de fundo das opções */
-            color: black; /* Cor do texto das opções */
-            transition: background-color 0.3s; /* Transição suave para o efeito hover */
-        }
-
-        /* Efeito hover para as opções da caixa de seleção */
-        #modalidades option:hover {
-            background-color: black; /* Cor de fundo preto no hover */
-            color: #26BF19; /* Cor do texto no hover */
-        }
-
-        .button-container{
-            margin-top: 3rem;
-            text-align: center;
-        }
-
-
-        
-    </style>
-
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <title>Eventos Esportivos</title>
 </head>
+
 <body>
     <header>
+        <img id="logo-calendario" src="img\logo 1.png" alt="logotipo sportech">
         <nav>
             <ul>
-                <li><a href="inicio.html">Início</a></li>
+                <li><a href="index.html">Início</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="eventos.html">Eventos</a></li>
                 <li><a href="agenda.html">Agenda</a></li>
                 <li><a href="historico.html">Histórico</a></li>
-
             </ul>
-            <div id="dev-icon"><a href="#"> <i class="fas fa-user profile-icon"></i></a></div>
-
+            <div id="dev-icon" onclick="toggleDropdown()">
+                <i class="fas fa-user profile-icon"></i>
+                <div class="options">
+                    <div class="option"><a class="drop" href="edicao.html"> Perfil</a></div>
+                    <div class="option"><a class="drop" href="modalidades.html">Modalidades</a></div>
+                    <div class="option"><a class="drop" href="sair.html">Sair</a></div>
+                </div>
+            </div>
         </nav>
     </header>
-    <div class="container">
 
-    <select id="modalidades" name="modalidades">
-        <option value="natacao">Natação</option>
-        <option value="futebol">Futebol</option>
-        <option value="volei"> <a href="volei.html">Volei</a></option>
-        <option value="basquete">Basquete</option>
-    </select>
+    <main id="evento">
 
-        <div class="button-container">
-            <input type="button" class="round-button" value="<" onclick="prevSlide()">
-            <h2>Eventos Esportivos</h2>
-            <input type="button" class="round-button" value=">" onclick="nextSlide()">
-        </div>
-        <!-- Exemplo de ícone de perfil com FontAwesome -->
-        <!-- <i class="fas fa-user profile-icon"></i> -->
+        <h2>Eventos Esportivos</h2>
 
-        <!-- Carrossel de imagens -->
-        <div class="owl-carousel">
+        <select id="modalidades" name="modalidades">
+            <option value="natacao">Natação</option>
+            <option value="futebol">Futebol</option>
+            <option value="volei"> <a href="volei.html">Volei</a></option>
+            <option value="basquete">Basquete</option>
+        </select>
+        <div class="eventos-container">
             <div class="item">
-                <img src="img2/1.jpg" alt="Esporte 1">
+                <img src="img/1.jpg" alt="Esporte 1">
                 <div class="sport-name">
                     <label>5° CAMPEONATO DE NATAÇÃO</label>
                     <p>15/12/2023</p>
@@ -178,7 +57,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="img2/2.jpg" alt="Esporte 2">
+                <img src="img/2.jpg" alt="Esporte 2">
                 <div class="sport-name">
                     <label>23° CAMPEONATO - UNISANTA</label>
                     <p>17/12/2023</p>
@@ -186,49 +65,31 @@
                 </div>
             </div>
             <div class="item">
-                <img src="img2/3.jpg" alt="Esporte 3">
+                <img src="img/3.jpg" alt="Esporte 3">
                 <div class="sport-name"><label>6° CAMPEONATO DE NATAÇÃO</label>
                     <p>12/12/2023</p>
-                <a id="concluir" href="eventoIndividual.html">Saiba mais</a>
+                    <a id="concluir" href="eventoIndividual.html">Saiba mais</a>
+                </div>
+            </div>
+        </div>
+        <div class="eventos-container">
+
+            <div class="item">
+                <img src="img/4.jpg" alt="Esporte 4">
+                <div class="sport-name"><label>10° CAMPEONATO DE NATAÇÃO</label>
+                    <p>27/12/2023</p>
+                    <a id="concluir" href="eventoIndividual.html">Saiba mais</a>
                 </div>
             </div>
             <div class="item">
-                <img src="img2/4.jpg" alt="Esporte 4">
-                <div class="sport-name"><label>10° CAMPEONATO DE NATAÇÃO</label>
-                <p>27/12/2023</p>
-                <a id="concluir" href="eventoIndividual.html">Saiba mais</a>
-            </div>
-        </div>
-            <div class="item">
-                <img src="img2/5.jpg" alt="Esporte 4">
+                <img src="img/5.jpg" alt="Esporte 4">
                 <div class="sport-name"><label>° CAMPEONATO DE NATAÇÃO</label>
-                <p>15/12/2023</p>
-                <a id="concluir" href="eventoIndividual.html">Saiba mais</a>
+                    <p>15/12/2023</p>
+                    <a id="concluir" href="eventoIndividual.html">Saiba mais</a>
+                </div>
             </div>
         </div>
-            <!-- Adicione mais itens conforme necessário -->
-        </div>
-
-    </div>
-
-    <script>
-        $(document).ready(function(){
-            $('.owl-carousel').owlCarousel({
-                items: 4,
-                loop: true,
-                margin: 10,
-                nav: false,
-                dots: true
-            });
-        });
-
-        function prevSlide() {
-            $('.owl-carousel').trigger('prev.owl.carousel');
-        }
-
-        function nextSlide() {
-            $('.owl-carousel').trigger('next.owl.carousel');
-        }
-    </script>
+    </main>
 </body>
+
 </html>
